{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 72,
  "lineage": "89d781a0-3c46-16c1-e77d-a894a598bd15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089f365c7b6a04f00",
            "arn": "arn:aws:ec2:us-east-1:021891614879:instance/i-0231851c06bad19f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0231851c06bad19f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0901b5a5f83b04c8b",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-18-212-101-184.compute-1.amazonaws.com",
            "public_ip": "18.212.101.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063bd807a4d29e559",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d024abadeb3c01fa",
            "tags": {
              "Name": "wordpress-EC2"
            },
            "tags_all": {
              "Name": "wordpress-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c350e25c907b18d9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_multiports_wordpress_sg",
            "aws_subnet.pub-subnet",
            "data.aws_ami.ami_version",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:internet-gateway/igw-001812737edefb945",
            "id": "igw-001812737edefb945",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-0ee774a79ce8bc962",
            "id": "rtb-0ee774a79ce8bc962",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001812737edefb945",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-rt"
            },
            "tags_all": {
              "Name": "wordpress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0914b0da1e38c62d8",
            "route_table_id": "rtb-0ee774a79ce8bc962",
            "subnet_id": "subnet-0d024abadeb3c01fa"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04332538b60c23933",
            "route_table_id": "rtb-0ee774a79ce8bc962",
            "subnet_id": "subnet-001abe8e793c9db9a"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f832fc819bdaa7",
            "route_table_id": "rtb-0ee774a79ce8bc962",
            "subnet_id": "subnet-0ec0c1ce0dd753b70"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wp-rt",
            "aws_subnet.pub-subnet",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_multiports_wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-0c350e25c907b18d9",
            "description": "Allow HTTP/HTTPS, SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c350e25c907b18d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wordpress-EC2-SG",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wordpress-EC2-SG"
            },
            "tags_all": {
              "Name": "Wordpress-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0d024abadeb3c01fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d024abadeb3c01fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.1.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-001abe8e793c9db9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001abe8e793c9db9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.2.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0ec0c1ce0dd753b70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec0c1ce0dd753b70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "pub-subnet-10.0.3.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp-vpc",
      "provider": "module.wordpress-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:vpc/vpc-06ecd9be6642821e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097c240948329eaf7",
            "default_route_table_id": "rtb-01e5dcde8d11da355",
            "default_security_group_id": "sg-0a85f42b4c96ee9c2",
            "dhcp_options_id": "dopt-0000a12e5b3eebea3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ecd9be6642821e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e5dcde8d11da355",
            "owner_id": "021891614879",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:route-table/rtb-092f116001f7838f4",
            "id": "rtb-092f116001f7838f4",
            "owner_id": "021891614879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress-db-rt"
            },
            "tags_all": {
              "Name": "wordpress-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr_rt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06819bd6c8f6e40eb",
            "route_table_id": "rtb-092f116001f7838f4",
            "subnet_id": "subnet-021cbeb4c107d8181"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03daf29588a7d3b8b",
            "route_table_id": "rtb-092f116001f7838f4",
            "subnet_id": "subnet-04c181a4af19ee29f"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0650fd317e86a91",
            "route_table_id": "rtb-092f116001f7838f4",
            "subnet_id": "subnet-0217d8015384274a3"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc",
            "module.wp-priv.aws_route_table.db_rt",
            "module.wp-priv.aws_subnet.pr-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:security-group/sg-0d8e1bc84fea04eca",
            "description": "Security group for WP-Database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c350e25c907b18d9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0d8e1bc84fea04eca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c350e25c907b18d9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "021891614879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_multiports_wordpress_sg",
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp-priv",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.101.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-021cbeb4c107d8181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021cbeb4c107d8181",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.101.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.102.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-04c181a4af19ee29f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c181a4af19ee29f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.102.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        },
        {
          "index_key": "10.0.103.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891614879:subnet/subnet-0217d8015384274a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0217d8015384274a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891614879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "tags_all": {
              "Name": "priv-subnet-10.0.103.0/24"
            },
            "vpc_id": "vpc-06ecd9be6642821e1"
          },
          "dependencies": [
            "module.wordpress-vpc.aws_vpc.wp-vpc"
          ]
        }
      ]
    }
  ]
}